--- a/app/src/main/res/layout/page3.xml
+++ b/app/src/main/res/layout/page3.xml
@@ -2,8 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff00ff00"
+    android:background="@drawable/third"
    >
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="开始体验"
+        android:textSize="20dp"
+
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"/>
+
 
 
 
