--- a/app/src/main/res/layout/guide.xml
+++ b/app/src/main/res/layout/guide.xml
@@ -6,7 +6,8 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ff303030">
+        android:background="#ff303030"
+        android:layout_alignParentBottom="true">
 
     </android.support.v4.view.ViewPager>
 
