--- a/app/src/main/res/layout/nextday2.xml
+++ b/app/src/main/res/layout/nextday2.xml
@@ -1,6 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- 明日信息模块 -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="3.3">
+
+        <!-- 明日星期 -->
+        <TextView
+            android:id="@+id/tomorrow_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 明日天气图片 -->
+        <ImageView
+            android:id="@+id/tomorrow_img"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/biz_plugin_weather_qing" />
+
+        <!-- 明日温度 -->
+        <TextView
+            android:id="@+id/tomorrow_wendu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 明日气候 -->
+        <TextView
+            android:id="@+id/tomorrow_climate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 明日风力 -->
+        <TextView
+            android:id="@+id/tomorrow_fengli"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+    </LinearLayout>
+
+    <!-- 后天信息模块 -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="3.3">
+
+        <!-- 后天星期 -->
+        <TextView
+            android:id="@+id/houtian_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 后天天气图片 -->
+        <ImageView
+            android:id="@+id/houtian_img"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/biz_plugin_weather_qing" />
+
+        <!-- 后天温度 -->
+        <TextView
+            android:id="@+id/houtian_wendu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 后天气候 -->
+        <TextView
+            android:id="@+id/houtian_climate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 后天风力 -->
+        <TextView
+            android:id="@+id/houtian_fengli"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+    </LinearLayout>
+
+
+    <!-- 大后天信息模块 -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="3.3">
+
+        <!-- 大后天星期 -->
+        <TextView
+            android:id="@+id/dahoutian_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 大后天天气图片 -->
+        <ImageView
+            android:id="@+id/dahoutian_img"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/biz_plugin_weather_qing" />
+
+        <!-- 大后天温度 -->
+        <TextView
+            android:id="@+id/dahoutian_wendu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 大后天气候 -->
+        <TextView
+            android:id="@+id/dahoutian_climate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+        <!-- 大后天风力 -->
+        <TextView
+            android:id="@+id/dahoutian_fengli"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="N/A"
+            android:textSize="20dp"
+            />
+
+    </LinearLayout>
 </LinearLayout>
